control/legacy_workspaces/archive_legacy_ShadowTag-v2/apps/devrel-demos/containers/aws-gcp-migration/aws/src/frontend/k8s/overlays/production/frontend-ingress.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: bank-of-anthos-ip
    networking.gke.io/managed-certificates: bank-of-anthos-cert
    networking.gke.io/v1beta1.FrontendConfig: frontend-frontend-config
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
